ckad/update-old-api-manifest/assets/workloads-old.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: garland
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
---
apiVersion: apps/v1beta1
kind: DaemonSet
metadata:
  name: log-collector
  namespace: garland
spec:
  template:
    metadata:
      labels:
        app: log-collector
    spec:
      containers:
      - name: fluentd
        image: fluentd:v1.16
