ckad/update-old-api-manifest/assets/ingress-old.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: garland
spec:
  rules:
  - host: example.local
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
      - path: /api
        backend:
          serviceName: api
          servicePort: 8080
